added icons for project wizard and *.cl files, improved descriptions.

--- a/jocl-project/src/com/mbien/opencl/project/JavaOpenCLDescription.html
+++ b/jocl-project/src/com/mbien/opencl/project/JavaOpenCLDescription.html
@@ -1,11 +1,12 @@
 <!--
-
+    description appears in the "new Project" dialog.
 -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        Creates a new <b>Java OpenCL Project</b>.
+        Creates a new <b>Java OpenCL Project</b>. This project will behave exactly like a
+        standard Java SE project but everything regarding <b>JOCL</b> will be set up for you.
     </body>
 </html>
